	CONTENT'

   +	Support AUTH LOGIN $value, see RFC 4954 section 4. Also support
	the other less commoon AUTH PLAIN when the argument waits for a
	334 reply. Reported by Steve Freegard.

		AUTH PLAIN
		334
		$base64_argument
		$result

--2.6.1--

   *	Requires libsnert 1.75.21.

   !	Fix compliler warnings. 

   !	Rename several macros based on libsnert 1.75.21 change.

--2.6.0--

   *	Requires libsnert 1.75.18.

   !	Updated to use MCC2 API, the broadcast-only protocol, to improve
	performance.

   !	Update support for p0f 3.06b or better.

   -	Removed verbose=warn; warnings are always enabled, since by
	definition they should be infrequent conditions.

   !	Fixed HELO/EHLO response for RFC 5321 section 4.1.1.1.

   !	VERB output now shows options on/off or level if greater than 1.

   !	Change smtp-delay-checks default to set, +smtp-delay-checks.

   !	Fix bug with action word and custom-reply message not being
	applied for some action words. Reported by Steven Freegard.

  !	LAN and relays no longer excluded from rate and concurrency limits.

--2.5.7--

   !	Change sink state replies to return a 421 4.3.2 unavailble message
	instead of command out of sequence. For consistency, the extended
	reply codes for rate-drop from 4.4.5 to 4.3.2 and concurrent-drop
	from 4.7.1 to 4.3.2.

   +    Add rate-421-delay and concurrent-421-delay options to impose a
        delay before sending the 421 busy in place of the welcome
        banner. Its been observed for +rate-drop, that some SMTP clients
        "woodpecker", in that if they get a 421 and the connection drops,
        then they reconnect immediately. Reported by Steve Freegard.

--2.5.6--

   *	Requires libsnert 1.75.17

   +	Added msg-limit-report, report-to options. Requested by Nick Stefan.

   +	Disable ESMTP support (EHLO, AUTH, STARTTLS) when connection is
	blacklisted.

   !	Fix old bug where some modules having *Optn functions were not
	initialised properly at startup; specifically those options that